--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "@emotion/styled": "^11.11.5",
     "@fontsource-variable/inter": "^5.0.18",
     "@mui/material": "^5.15.15",
+    "@nextui-org/react": "^2.3.6",
     "axios": "^1.6.8",
+    "framer-motion": "^11.1.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.3",
