--- a/package.json
+++ b/package.json
@@ -16,11 +16,12 @@
     "@mui/material": "^5.15.15",
     "@nextui-org/react": "^2.3.6",
     "axios": "^1.6.8",
-    "framer-motion": "^11.1.7",
+    "framer-motion": "^11.1.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.3",
     "react-router-dom": "^6.23.0",
+    "sonner": "^1.4.41",
     "uuid": "^9.0.1",
     "zustand": "^4.5.2"
   },
