--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@mui/material": "^5.15.15",
     "@nextui-org/react": "^2.3.6",
     "axios": "^1.6.8",
+    "axios-retry": "^4.2.0",
     "framer-motion": "^11.1.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
